# cxkcdpass

./: .gitignore  Makefile  Makefile.am  Makefile.dev  README.md  TODO.md  cmdline.c  cmdline.h  configure.ac  cxkcdpass.c  cxkcdpass.ggo  pre-build.sh
contrib/: cxkcdpass.bash-completion
contrib/bash_completion.d/: Makefile.am  cxkcdpass
doc/: Makefile.am  cxkcdpass-0.0.1.html  cxkcdpass.1  cxkcdpass.info  cxkcdpass.texi  manual.md
src/: Makefile.am  cmdline.c  cmdline.h  common.c  common.h  cxkcdpass.c  random.c  random.h  wordlist.c  wordlist.h
tests/: Makefile.am  check_common.c  check_random.c  check_wordlist.c  test.c
